Fixing spacing for center column (#26)
* removed word break

Things were looking weird in edge and FF.

* Added all things auth

* removed thumbs.db

* Updated OWA post

Updated the post to make it easier to follow by adding in more images, focusing in on the high level, rather than the nitty gritty, and also including results.

* Fixing distribution of center column

--- a/_sass/abstracts/variables.scss
+++ b/_sass/abstracts/variables.scss
@@ -30,7 +30,8 @@ $body-text-color: $primary-color !default;
 $body-link-color: $highlight-color !default;
 $blockquote-text-color: $secondary-color !default;
 $caption-text-color: $secondary-color !default;
-$muted-display-text-color: $muted-grey-blue-tinge-color !default;
+$project-info-display-text-color: $primary-color !default;
+$muted-display-text-color: $muted-grey-blue-tinge-color;
 
 // Code
 $code-bg-color: #f3f6fa !default;
