--- a/_sass/layout/main.scss
+++ b/_sass/layout/main.scss
@@ -1,6 +1,8 @@
 .main-content {
   word-wrap: break-word;
-  max-width: 50em;
+  max-width: 50rem;
+
+
 
 
   /*:first-child {
